src/objects/FTP_Link__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>accountName__c</fullName>
        <label>accountName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountPassword__c</fullName>
        <label>accountPassword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expiration_date__c</fullName>
        <label>expiration_date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lifetime__c</fullName>
        <label>lifetime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FTP Link</label>
</CustomObject>